fix cards gap :-(

--- a/src/sass/_advantage.sass
+++ b/src/sass/_advantage.sass
@@ -10,15 +10,18 @@
         display: flex
         justify-content: space-evenly
         flex-wrap: wrap
-        gap: 16px
+        //gap: 16px
 
     &__card
-        padding: 14px 12px
+        min-height: 149px
+        min-width: 105px
+        margin: 8px
+        padding: 14px 10px
         display: flex
         flex-direction: column
         align-items: center
         //justify-content: space-evenly
-        flex: 0 0 110px
+        flex: 0 0 100px
         background-color: $primary-bg-light_green
         border-radius: 5px
 
