--- a/src/sass/_subscribe.sass
+++ b/src/sass/_subscribe.sass
@@ -10,9 +10,10 @@
         display: flex
         flex-wrap: wrap
         justify-content: space-evenly
-        gap: 16px
+        //gap: 16px
 
     &__card
+        margin: 8px
         padding: 18px 10px
         flex: 0 1 110px
         border-radius: 5px
@@ -114,7 +115,7 @@
 
 @media (min-width: 628px) and (max-width: 767px)
     .subscribe__cards
-        padding: 0 160px
+        padding: 0 158px
 
 @media (min-width: $media-tablet)
     .subscribe
